<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ra.appambekar.fragments.qualifications.QualificationsFragment">

    <ra.appambekar.views.ParallaxSkyLayout
        android:id="@+id/pl_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ScrollView
        android:id="@+id/scrollContainer_intro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar_dark_low"
            android:orientation="vertical"
            android:padding="30dp">

            <ra.smarttextview.SmartTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:textColor="@color/text_bright"
                android:text="@string/i_heading"
                android:textAllCaps="true"
                android:singleLine="true"
                android:textSize="50sp"
                app:justified="true"
                app:font="thin"/>

            <ra.smarttextview.SmartTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:textColor="@color/text_bright"
                android:text="@string/i_sub_heading"
                android:textSize="15sp"
                android:gravity="end"
                app:font="thick"/>

            <ra.smarttextview.SmartTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="75dp"
                android:textColor="@color/text_bright"
                android:text="@string/i_intro"
                android:textSize="22sp"
                app:justified="true"
                app:font="thin"/>

            <ra.smarttextview.SmartTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/text_bright"
                android:text="@string/i_software_title"
                android:textSize="36sp"
                app:font="thin"/>

            <ra.smarttextview.SmartTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:textColor="@color/text_bright"
                android:text="@string/i_software_content"
                android:textSize="18sp"
                app:justified="true"
                app:font="reg"/>

            <ra.smarttextview.SmartTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/text_bright"
                android:text="@string/i_apps_title"
                android:textSize="36sp"
                app:font="thin"/>

            <ra.smarttextview.SmartTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:textColor="@color/text_bright"
                android:text="@string/i_apps_content"
                android:textSize="18sp"
                app:justified="true"
                app:font="reg"/>

            <ra.smarttextview.SmartTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/text_bright"
                android:text="@string/i_android_title"
                android:textSize="36sp"
                app:font="thin"/>

            <ra.smarttextview.SmartTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:textColor="@color/text_bright"
                android:text="@string/i_android_content"
                android:textSize="18sp"
                app:justified="true"
                app:font="reg"/>

            <ra.smarttextview.SmartTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/text_bright"
                android:text="@string/i_remote_title"
                android:textSize="36sp"
                app:font="thin"/>

            <ra.smarttextview.SmartTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="75dp"
                android:textColor="@color/text_bright"
                android:text="@string/i_remote_content"
                android:textSize="18sp"
                app:justified="true"
                app:font="reg"/>

            <ra.smarttextview.SmartTextView
                android:id="@+id/tv_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_button"
                android:textColor="@color/text_bright"
                android:text="@string/c_heading"
                android:textSize="16sp"
                android:padding="10dp"
                app:font="thin"/>


        </LinearLayout>

    </ScrollView>

</FrameLayout>
